# Django-Render-Boilerplate

./: README.md  build.sh  pyproject.toml
backend/: settings.py
core/: models.py
